<resources>
    <string name="app_name">continuos_lab</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="default_fragment_title">Hello!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- New form fragment strings -->
    <string name="new_form_title">New Form</string>
    <string name="form_name_hint">Nombre</string>
    <string name="form_date_hint">date dd/mm/yyyy</string>
    <string-array name="form_category">
        <item>Formulario</item>
        <item>Encuesta</item>
        <item>Otro</item>
    </string-array>
    <string name="form_description_hint">fill any description here.</string>
    <string name="new_form_submit">Submit</string>
    <string name="login_btn">Login</string>
    <string name="username">username:</string>
    <string name="password">password:</string>
    <string name="main_login_btn">LOGIN!</string>
    <string name="add_question_btn">Add Question</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="answer_placeholder">Answer</string>
</resources>
