<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diego.continuos_lab.NewFormFragment">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->


        <TextView
            android:id="@+id/textView2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/new_form_title"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/form_name_hint"
            app:layout_constraintBottom_toTopOf="@+id/date"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/date"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="33dp"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/form_date_hint"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@+id/category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <Spinner
            android:id="@+id/category"
            android:entries="@array/form_category"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="57dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="@+id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <EditText
            android:id="@+id/description"
            android:layout_width="320dp"
            android:layout_height="150dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/form_description_hint"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category" />

        <LinearLayout
            android:id="@+id/questions_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/description">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Questions"/>
            <ListView
                android:id="@+id/questions_container_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </ListView>
            <Button
                android:id="@+id/new_form_add_question_btn"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/add_question_btn"/>
        </LinearLayout>

        <Button
            android:id="@+id/formSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/new_form_submit"
            app:layout_constraintTop_toBottomOf="@+id/questions_container"/>


    </android.support.constraint.ConstraintLayout>
</FrameLayout>